Typo corrections; added citations and content

--- a/eso-project.bib
+++ b/eso-project.bib
@@ -79,9 +79,6 @@
 	year = {2008}
 }
 
-@book{__????
-}
-
 @incollection{melnik_multiple_2007,
 	title = {Multiple perspectives on executable acceptance test-driven development},
 	booktitle = {Agile Processes in Software Engineering and Extreme Programming},
@@ -266,6 +263,19 @@
   note = {\url{http://www.codeproject.com/ Tips/344663/Static-code-analysis}},
   year = {2012}}
 
+@misc{fowler_products_not_projects,
+  title={Microservices},
+  author={Martin Fowler},
+  note = {\url{http://martinfowler.com/articles/microservices.html \#ProductsNotProjects}}
+}
+
+@misc{fowler_ci_2006,
+  title={Continuous Integration},
+  author={Martin Fowler},
+  year={2006},
+  note={\url{http://martinfowler.com/articles/continuousIntegration.html}}
+}
+
 @book{Fowler1999,
   added-at = {2007-09-26T23:42:13.000+0200},
   address = {Boston, MA, USA},
@@ -287,3 +297,20 @@
   author = {Pyramid Web Framework},
   note = {\url{http://docs.pylonsproject.org/ projects/pyramid/en/ latest/narr/testing.html}}
 }
+
+@inproceedings{zowghi2002study,
+  title={A study of the impact of requirements volatility on software project performance},
+  author={Zowghi, Didar and Nurmuliani, Nur},
+  booktitle={Software Engineering Conference, 2002. Ninth Asia-Pacific},
+  pages={3--11},
+  year={2002},
+  organization={IEEE}
+}
+
+@book{chelimsky2010rspec,
+  title={The RSpec book: Behaviour driven development with Rspec, Cucumber, and friends},
+  author={Chelimsky, David and Astels, Dave and Helmkamp, Bryan and North, Dan and Dennis, Zach and Hellesoy, Aslak},
+  year={2010},
+  publisher={Pragmatic Bookshelf}
+}
+
